hphp/test/slow/dom_document/append_invalid.php.expectf

Fatal error: Uncaught exception 'DOMException' with message 'Wrong Document Error' in %s/append_invalid.php:15
Stack trace:
%A
